--- a/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
+++ b/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
@@ -7,16 +7,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="pos1">
     <title>GeoTagApp</title>
+    </div>
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header class="header">
+        <div class="pos2">
         <img src="./images/location.png" class="header__image" alt="an image of a map and location" width="34" height="30" >
-        
+        </div>
+        <div class="pos1">
         <h1 class="header__title">GeoTagApp</h1>
+        </div>
         <nav class="header__navigation">
             <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
         </nav>
