--- a/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
+++ b/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
@@ -36,11 +36,11 @@
                 
                 <div class="div1">
                 <label for="Latitude">Latitude:</label><br>
-                <input type="number" id="fLatitude" name="fLatitude" value="49.01379"><br>
+                <input type="number" id="fLatitude" name="fLatitude"  readonly value="49.01379"><br>
                 <label for="Longitude">Longitude:</label><br>
-                <input type="number" id="fLongitude" name="fLongitude" value="8.390071"><br>
+                <input type="number" id="fLongitude" name="fLongitude" readonly value="8.390071"><br>
                 <label for="Name">Name:</label><br>
-                <input type="text" id="fname" name="fname" value="e.g. Central Berlin"><br>
+                <input type="text" id="fname" name="fname"  value="e.g. Central Berlin"><br>
                 <label for="Hashtag">Hashtag:</label><br>
                 <input type="text" id="fHashtag" name="fHashtag" value="e.g.#ber"><br><br>
                 <input type="submit" value="Add value">
