--- a/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
+++ b/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/index.html
@@ -7,21 +7,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div class="pos1">
     <title>GeoTagApp</title>
-    </div>
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header class="header">
-        <div class="pos2">
-        <img src="./images/location.png" class="header__image" alt="an image of a map and location" width="34" height="30" >
-        </div>
-        <div class="pos1">
+        <img src="./images/location.png" class="header__image" alt="an image of a map and location">
         <h1 class="header__title">GeoTagApp</h1>
-        </div>
         <nav class="header__navigation">
             <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
         </nav>
@@ -33,18 +27,23 @@
 
             <!-- ############### VS1Lab 1a Form 1 Start -->
             <form id="tag-form" action="/tagging" method="post">
-                
-                <div class="div1">
-                <label for="Latitude">Latitude:</label><br>
-                <input type="number" id="fLatitude" name="fLatitude"  readonly value="49.01379"><br>
-                <label for="Longitude">Longitude:</label><br>
-                <input type="number" id="fLongitude" name="fLongitude" readonly value="8.390071"><br>
-                <label for="Name">Name:</label><br>
-                <input type="text" id="fname" name="fname"  value="e.g. Central Berlin"><br>
-                <label for="Hashtag">Hashtag:</label><br>
-                <input type="text" id="fHashtag" name="fHashtag" value="e.g.#ber"><br><br>
-                <input type="submit" value="Add value">
-                </div>
+                <fieldset>
+                <legend>Add a new GeoTag</legend>
+                <label for="latitude">Latitude:</label><br>
+                <input id="latitude" type="number" placeholder="Please type in the latitude: " name="latitude" readonly value="49.01379" ><br>
+                <label for="longitude">Longitude:</label><br>
+                <input id="longitude" type="text" placeholder="Please type in the longitude: " name="longitude" readonly value=" 8.390071"><br>
+                <label for="name">Name:</label><br>
+                <input id="name" type="text" maxlength="10" placeholder="e.g. Central Berlin  " name="name" pattern="[A-Z]{10}$" required > <br>
+                <label for="hashtag">Hashtag:</label><br>
+                <input id="hashtag" type="text" placeholder="e.g. #ber" name="hashtag" value="#" pattern="^#{1}[A-Z]{10}$" maxlength="11"><br>
+                <button type="submit">Add Tag</button>
+</fieldset>
+
+
+
+                <!-- ... your code here ... -->
+
             </form>
             <!-- ############### VS1Lab 1a Form 1 End -->
 
@@ -55,11 +54,17 @@
 
             <!-- ############### VS1Lab 1a Form 2 Start -->
             <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
-                <div class="div2">
-                <label for="search">Search term or keywords:</label><br>
-                <input type="text" id="fHashtag" name="fHashtag" value="e.g. Berlin"><br><br>
-                <input type="submit" value="Search">
-                </div>
+
+                <!-- ... your code here ... -->
+
+                <fieldset>
+                    <legend>Search</legend>
+                    <label for="searchterm">Search term or keywords: </label><br>
+                    <input type="text" placeholder="e.g. Berlin" id="searchterm" name="searchterm"><br>
+                    <button type="submit">Search</button>
+                    <input id="latitude" type="hidden" name="latitude">
+                    <input id="longitude" type="hidden" name="longitude">
+                </fieldset>
             </form>
             <!-- ############### VS1Lab 1a Form 2 End -->
 
